--- a/customcursor/style.css
+++ b/customcursor/style.css
@@ -3,14 +3,16 @@
     padding: 0;
 }
 
-.wrapper {
-    background: #231e24;
+.wrapper {  
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     cursor: url('iconmonstr-cursor-25-24.png'), auto; 
+    background:
+    linear-gradient(rgba(160, 160, 160, 0.5), rgba(0,0,0,.5)),
+    url('noise.svg');
 }
 
 h1 {
@@ -21,7 +23,7 @@ h1 {
 
 h1:hover {
     transition: all 200ms;
-    color: #36ff68;
+    color: #ffac74;
 }
 h1:hover::after {
 
@@ -75,7 +77,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #cbf3f0;
+    color: white;
     font-style: italic;
     font-family: monospace, sans-serif;
     font-size: 24px;
@@ -91,7 +93,7 @@ nav ul li a::after {
     width: 0;
     height: 4px;
     border-radius: 1rem;
-    background: #36ff68;
+    background: #ffac74;
     position: absolute;
     bottom: -4px;
     left: 0;   
@@ -111,7 +113,7 @@ nav ul li a:hover {
     width: 0px;
     height: 0px;
     border-radius: 50%;
-    border: 2px solid #cbf3f0;
+    border: 2px solid white;
     left: 0;
     transform: translate(-50%, -50%);
     pointer-events: none;
