--- a/typerwritercss/styles.css
+++ b/typerwritercss/styles.css
@@ -35,9 +35,14 @@ body {
     z-index: -1;
 }
 
+.background {
+    margin: 40px;
+}
+
 .wrapper {
     background-color:rgb(44, 38, 43); 
-
+    border-radius: 6px;
+    border-color: rgb(44, 38, 43);
 }
 
 .title {
@@ -51,6 +56,8 @@ body {
 
 #grit {
     text-align: center;
+    padding-bottom: 9px;
+    margin: 9px;
     font-size: 17px;
     font-family: 'MS PGothic', Osaka, Arial, sans-serif;
     font-weight: bolder;
@@ -70,7 +77,7 @@ p {
     justify-content: center;
     align-items: center;
     flex-direction: column;  
-  
+    padding-bottom: 2px;
 }
 
 #desc1 {
